# lilium-usi

./: .gitignore  .gitmodules  LICENSE-MIT  Makefile  Makefile.in  README.md  config.sub  configure  configure.ac  lib.mk
arch-include/x86_64/bits/: fenv.h
c/: Makefile  build.d
c/src/: abs.c  at_exit.c  ctype.c  div.c  exit.c  malloc-helpers.c  malloc.c  memcpy.c  rand.c
c/src/generic/: math-impls.ixx  sqrtf.cxx
c/src/x86_64/: fenv.s  fenv_manip.c  fma.c  sqrt.s  sqrtf.s  sqrtld.s
dl/: Makefile  build.d
include/: ctype.h  elf.h  fenv.h  float.h  inttypes.h  io-handles.h  math.h  random.h  stdbool.h  stddef.h  stdint.h  stdlib.h  wctype.h
include-local/: asm.h  at_exit.h  helpers.h  stdatomic.h  syscall.h
include/bits/: abs.h  bool.h  div.h  has-builtin.h  inline.h  lang-version.h  noexcept.h  noreturn.h  thread-local.h
ldso/: Makefile  build.d
usi/: Makefile  build.d
usi-base/: Makefile  build.d
usi-base/src/: info.c  syscall_defs.c
usi-debug/: Makefile  build.d
usi-init/: Makefile  build.d
usi-init/src/: at_exit.c  init.c  memcpy.c
usi-init/src/x86_64/: start.s
usi-io/: Makefile  build.d
usi-kmgmt/: Makefile  build.d
usi-process/: Makefile  build.d
usi-rtld/: Makefile  build.d
usi-support/: Makefile  build.d
usi-support/src/: ioh.c  memcpy.c  string.c
usi-thread/: Makefile  build.d
usi-unwind/: Makefile  build.d
